# blog

./: .editorconfig  .gitignore  .justfile  README.md  blog.sublime-project  flake.nix  lib.typ  main.typ
.github/workflows/: pages.yaml
assets/: base16.tmTheme
assets/themes/: github.yaml  harmonic16-dark.yaml  ocean.yaml
content/: about-blog.ru.typ  about-blog.typ  index.typ  local-nixpkgs-build.typ  why-i-dont-like-go.typ
content/notes/: index.typ  local-nixpkgs-build.typ  run-zsh-nix-develop.typ
docs/: how-add-post.md
lib/: blocks.typ  constants.typ  content.typ  gen.typ  helpers.typ  lib.typ  meta.typ  path.typ  resolve.typ  state.typ  template.typ
public/: main.css  main.js
syntect-plugin/: Cargo.toml  lib.typ
syntect-plugin/src/: lib.rs
