[package]
name = "syntect-plugin"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
syntect = { version = "5.2.0", default-features = false, features = [
	# "default-fancy",
	"default-syntaxes",
	"default-themes",
	"regex-fancy",
] }
two-face = { git = "https://github.com/cosmichorrordev/two-face", rev = "ce73b6b844ea409cb7b980b4ba93aae17607385c", default-features = false, features = ["syntect-default-fancy"] }
# two-face = { version = "0.4.3", default-features = false, features = ["syntect-default-fancy"] }
wasm-minimal-protocol = "0.1.0"

[profile.dev.package.syntect]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
